<resources>
    <string name="app_name">login</string>

    <string name="titulo">
    <b><font color="#555555">Medi</font></b><b><font color="#2dbed1">Lab</font></b>
    </string>

    <string name="infotitulo">
        Appoint Your Doctor Easily
    </string>

    <string name="email">
        Email Address
    </string>

    <string name="password">
      Password
    </string>

    <string name="remember">
      Remember me and keep me logged in
    </string>


    <string name="sign_in">
    <b>Sign In</b>
    </string>

    <string name="acessar_com">
        <b>Or Login with</b>
    </string>


    <string name="google">
        <b>Google</b>
    </string>

    <string name="facebook">
        <b>Facebook</b>
    </string>


    <string name="sign_up">
    <font color="#555555">Don\'t have an account? </font><b><font color="#2dbed1"> Sign Up</font></b>
    </string>




</resources>